添加多个服务

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <modules>
         <module>provider</module>
         <module>consumer</module>
+        <module>datamodule</module>
+        <module>myutils</module>
     </modules>
 
 
