--- a/datamodule/pom.xml
+++ b/datamodule/pom.xml
@@ -9,9 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>provider</artifactId>
-
-
+    <groupId>org.llf.up</groupId>
+    <artifactId>datamodule</artifactId>
 
 
 </project>
