--- a/provider/orderservice/src/main/resources/application.yml
+++ b/provider/orderservice/src/main/resources/application.yml
@@ -7,6 +7,8 @@ server:
 spring:
   application:
     name: orderservice
+  zipkin:
+    base-url: http://localhost:8888
 feign:
   hystrix:
     enabled: true
