--- a/consumer/randomservice/src/main/resources/application.yml
+++ b/consumer/randomservice/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://35.220.223.122:8761//eureka/
 server:
   port: 9998
 spring:
