--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>datamodule</module>
         <module>myutils</module>
         <module>test-util</module>
+        <module>zuul159</module>
 
     </modules>
 
